objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active_Duty_End_Date__c</fullName>
        <label>Active Duty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Duty_Start_Date__c</fullName>
        <label>Active Duty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerPersonAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Account - Parent of Weblogin contact</description>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Weblogins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flag_Deceased__c</fullName>
        <label>Flag Deceased</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Lead__c</fullName>
        <label>Flag Lead</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Prison__c</fullName>
        <label>Flag Prison</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Military_Status__c</fullName>
        <label>Military Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Suffix__c</fullName>
        <label>Name Suffix</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Employer_Name__c</fullName>
        <label>Person Employer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGUID__c</fullName>
        <description>Unique federation identifier provided by TFSWeb IDP</description>
        <externalId>true</externalId>
        <label>SGUID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Branch__c</fullName>
        <label>Service Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Service Branch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number_Last_4_Chars__c</fullName>
        <formula>TRIM(RIGHT(Social_Security_Number__c, 4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Security Number Last 4 Chars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number_Last_6_Chars__c</fullName>
        <formula>TRIM(RIGHT(Social_Security_Number__c, 6))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Security Number Last 6 Chars</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <externalId>true</externalId>
        <label>Social Security Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_CompanyName__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_DeProvisioned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web DeProvisioned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_UserId__c</fullName>
        <label>Web UserId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Weblogin</fullName>
        <active>true</active>
        <description>Record type for customer community web login for TFS or LFS</description>
        <label>Weblogin</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>